[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
description = "Code adapted from the book 'Rust Atomics and LOcks' by Mara Bos"
edition = "2024"
homepage = "https://www.CroftSoft.com/"
license = "MIT"
name = "book-rust-atomics"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/book-rust-atomics"
rust-version = "1.89.0"
version = "0.0.0-SNAPSHOT"

[dependencies]
atomic-wait = "1.1.0"
rand = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"

[dev-dependencies]

[features]

[profile.dev]
debug = "line-tables-only"

[profile.release]
